--- a/vercel.json
+++ b/vercel.json
@@ -1,13 +1,7 @@
 {
-  "buildCommand": "cd apps/api && npm run build",
+  "buildCommand": "npx turbo run build --filter=@repo/api",
   "outputDirectory": "apps/api/dist",
   "installCommand": "npm install",
   "devCommand": "npm run dev --workspace=@repo/api",
-  "framework": null,
-  "rewrites": [
-    {
-      "source": "/(.*)",
-      "destination": "/apps/api/dist/index.js"
-    }
-  ]
+  "framework": null
 }
