--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -12,11 +12,11 @@
     "test:coverage": "vitest --coverage"
   },
   "dependencies": {
+    "@hono/node-server": "^1.11.1",
     "@repo/database": "*",
     "@repo/types": "*",
-    "hono": "^4.3.11",
-    "@hono/node-server": "^1.11.1",
     "bcryptjs": "^2.4.3",
+    "hono": "^4.3.11",
     "jsonwebtoken": "^9.0.2",
     "zod": "^3.23.8"
   },
@@ -25,6 +25,7 @@
     "@types/bcryptjs": "^2.4.6",
     "@types/jsonwebtoken": "^9.0.6",
     "@types/node": "^20.12.12",
+    "dotenv": "^17.2.3",
     "tsx": "^4.11.0",
     "typescript": "^5.4.5",
     "vitest": "^1.6.0"
