feat: add Prisma database support to Vercel deployment
- Add postinstall script to generate Prisma client automatically
- Re-enable Prisma in serverless function with connection pooling
- Add singleton pattern for Prisma client (reuse across invocations)
- Re-enable /test/db endpoint with proper error handling
- Test locally: all endpoints working including database

Deployment should now have full database connectivity

--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "lint": "turbo run lint",
     "type-check": "turbo run type-check",
     "clean": "turbo run clean && rm -rf node_modules",
-    "format": "prettier --write \"**/*.{ts,tsx,md,json}\""
+    "format": "prettier --write \"**/*.{ts,tsx,md,json}\"",
+    "postinstall": "cd packages/database && npm run db:generate"
   },
   "devDependencies": {
     "turbo": "^1.13.0",
