--- a/.gitignore
+++ b/.gitignore
@@ -41,3 +41,13 @@ yarn-error.log*
 .turbo/
 .vercel/
 .vercel
+
+# Auto Claude data directory
+.auto-claude/
+
+# Auto Claude generated files
+.auto-claude-security.json
+.auto-claude-status
+.claude_settings.json
+.security-key
+logs/security/
